--- a/lists.html
+++ b/lists.html
@@ -13,8 +13,8 @@
             <li v-for="name in names" v-text="name"></li>
         </ul>
 
-        <input type="text" id="input">
-        <button id="button">Add Name</button>
+        <input type="text" id="input" v-model="newName">
+        <button @click="addName">Add Name</button>
     </div>
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script> 
     <script>
@@ -23,18 +23,17 @@
       var app =  new Vue({
             el: '#root',
             data: {
+                newName:'',
                 names: ['Joe', 'Mary', 'Jack', 'Jane']
             },
 
-            mounted() {
-                document.querySelector('#button').addEventListener('click', () => {
-                    let name = document.querySelector('#input');
-
-                    app.names.push(name.value);
-                    name.value ='';
-                });
+            methods: {
+                addName(){
+                    this.names.push(this.newName);
+                    this.newName = '';
+                }
             }
-        })
+        });
 
     </script>
 </body>
