--- a/components-within-components.html
+++ b/components-within-components.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +8,8 @@
 </head>
 <body>
     <div id="root">
-        <task>{{ message }}</task>
-        <task>Go home</task>
-        <task>Wash your car</task>
+        <task-list></task-list>
+        </task-list>
     </div>
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script> 
     <script src="main.js"></script>
