--- a/practical-components-exercise-1.html
+++ b/practical-components-exercise-1.html
@@ -14,7 +14,19 @@
 </head>
 <body>
     <div id="root" class="container">
-
+        <tabs>
+            <tab name="About Us" :selected="true">
+                <h1>Here is the content for the about us tab.</h1>
+            </tab>
+            <tab name="About Our Culture">
+                <h1>Here is the content for the about our culture tab.</h1>
+            </tab>
+            <tab name="About Our Vision">
+                <h1>Here is the content for the about our vision tab.</h1>
+            </tab>
+        </tabs>
+        <br>
+        <br>
         <message  title="Hello World" body="Lorem ipsum dolor sit amet, consectetur adipiscing elit."></message>
 
         <modal v-if="showModal" @close="showModal = false" >
